# GeoNature-citizen

./: .angulardoc.json  .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  VERSION  api_geonature-service.conf  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.override.sample.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker.sh  gncitizen_api-service.conf  gncitizen_frontssr-service.conf  install_app.sh  mcd.uml  production.mk  readthedocs.yaml  update_app.sh
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  config.yml
.github/workflows/: documentation.yml  linter.yml  test_install.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  app.db  dev-requirements.txt  entrypoint.sh  gcnserver.py  gncserver.py  poetry.toml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  requirements_dev.txt  run_tests.sh  server.py  start_gunicorn.sh  test.py  test_old.py  tests_qgis.qgs  wsgi.py
backend/gncitizen/: __init__.py
backend/gncitizen/auth/: models.py  routes.py  schemas.py
backend/gncitizen/core/: media.py  models.py  resources.py  routes.py  utils.py
backend/gncitizen/core/areas/: admin.py  models.py  routes.py
backend/gncitizen/core/auth/: models.py  routes.py
backend/gncitizen/core/badges/: routes.py
backend/gncitizen/core/commons/: admin.py  models.py  routes.py
backend/gncitizen/core/commons/templates/: edit.html  upload_geojson.html
backend/gncitizen/core/gnc_sights/: models.py  routes.py  schemas.py
backend/gncitizen/core/observations/: admin.py  models.py  routes.py
backend/gncitizen/core/programs/: models.py  routes.py
backend/gncitizen/core/ref_geo/: models.py  routes.py
backend/gncitizen/core/sights/: models.py  routes.py  schemas.py
backend/gncitizen/core/sites/: admin.py  models.py  routes.py
backend/gncitizen/core/taxonomy/: models.py  routes.py  schemas.py
backend/gncitizen/core/users/: admin.py  models.py  routes.py
backend/gncitizen/georepos/: models.py  routes.py  schemas.py
backend/gncitizen/sights/: models.py  resources.py  routes.py  schemas.py
backend/gncitizen/taxonomy/: models.py
backend/gncitizen/utils/: admin.py  env.py  errors.py  geo.py  geometry.py  helpers.py  import_geojson.py  init_data.py  jwt.py  logs.py  mail_check.py  media.py  sqlalchemy.py  taxonomy.py  toml.py  utilsgeometry.py  utilsjwt.py  utilspost.py  utilssqlalchemy.py  utilstoml.py
backend/gncitizen/utils/rewards/: __init__.py  __main__.py  classifier.py  config.py  fact.py  model.py  models.py  queries.py  rule.py  rules.py
backend/migrations/: env.py
backend/migrations/versions/: 091118be6709_registration_required_on_programs.py  62379d9ccc13_add_observation_validation_logic.py  62379d9ccc13_add_observation_validation_logic.py.old  7be0cef93665_validation_module.py  b7734f126b8c_review_indexes.py  e8c1cd57ad16_init_v1_0_0.py
backend/templates/: edit.html  home.html
backend/tests/: common.py  test_auth.py  test_observations.py  test_sites.py
config/: README.md  badges_config.py  config.toml.template  default_config.toml.example  default_config.toml.template  settings.ini.template
config/apache/: gncitizen_api.conf  gncitizen_frontssr.conf
config/custom/form/: mares.json
contrib/: README.md
data/: demo_data.sql  init.sql  ref_geo.sh  ref_geo.sql  reset.sql
data/addons/qgis_admin/: README.md  citizenOnQgis-admin.qgs.template  generateQgisProject.sh
data/custom_forms_samples/: README.md  arbres_remarquables.json  avosmares.json  is_dead.json  nids_hirondelles.json  stade_vie_papillon.json  trogne.json  type_contact.json
data/maintenance/: index.html
data/migrations/: .gitignore  add_lines_polygons.sql  add_taxon_name_and_municipality.py  add_user_eval.sql  pnm_2020.sql  v0.2.0_to_0.3.0.sql  v0.3.0_to_0.3.1.sql  v0.3.1_to_0.4.0.sql  v0.4.0_to_0.5.0.sql  v0.5.0_to_0.6.0.sql  v0.5.0_to_0.99.0.sql  v0.99.0_to_0.99.5.sql  v0.99.4_to_1.0.0.sql
data/qgis_admin/: README.md  citizenOnQgis-admin.qgs.template  generateQgisProject.sh
docs/: CHANGELOG.md  Configuration - champs additionnels des programmes  Configuration de l'authentification  Docker.rst  Makefile  administration.md  authentification.rst  badges.rst  conf.py  configuration.rst  docker.rst  index.rst  installation.rst  update.md
docs/devs/: backend_functions.rst  badges.rst  config_files.rst  contribute.rst  index.rst  init_launch_backend.rst  init_launch_db.rst  init_launch_frontend.rst
docs/prod/: badges.rst  index.rst
external_modules/: README.md
frontend/: .angulardoc.json  .eslintrc.js  Dockerfile  Dockerfile.dev  README.md  angular.json  package-lock.json  package.json  server.ts  start_server.sh  tsconfig.json  webpack.server.config.js
frontend/e2e/: protractor.conf.js
frontend/e2e/src/: app.e2e-spec.ts
frontend/src/: index.html  main.ts  polyfills.ts  robots.txt  styles.css  tsconfig.app.json  tsconfig.server.json
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  app.routing.ts  app.server.module.ts  rest.service.ts
frontend/src/conf/: app.config.ts.sample  app.config.ts.template  main.config.ts  (+2 more)
frontend/tools/: dev-i18n-proxy.js  dev-i18n-proxy.ts
install/: check_settings.sh  copy_config.sh  create_db.sh  create_db_user.sh  generate_password.sh  install_app.sh  install_taxhub.sh  update_app.sh
install/apache/: gncitizen.conf
install/supervisor/: gncitizen_api-service.conf  gncitizen_frontssr-service.conf
nginx/: nginx.conf
(+336 files in other folders)
