[tool.poetry]
name = "gncitizen-backend"
version = "1.0.0"
description = "Citizen nature inventories (Backend"
authors = ["lpofredc",'QuentinJouet','jolleon','HamoudaHamine','Naomi-Fischer','camillemonchicourt','hypsug0','jbdesbas','samuelpriou','orovellotti','ktalbi']
license = "AGPLv3"


[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.3"
Flask-Admin = "^1.6.0"
Flask-JWT-Extended = "^4.1.0"
flasgger = "^0.9.5"
psycopg2-binary = "^2.9.3"
Shapely = "^1.7.1"
SQLAlchemy = "^1.4.31"
toml = "^0.10.2"
gunicorn = "^20.1.0"
GeoAlchemy2 = "^0.10.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-CKEditor = "^0.4.5"
Flask-Cors = "^3.0.10"
geojson = "^2.5.0"
coloredlogs = "^15.0.1"
passlib = "^1.7.4"
requests = "^2.27.1"
xlwt = "^1.3.0"
Flask-Caching = "^1.10.1"
utils-flask-sqlalchemy-geo = "^0.2.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.2"
autoflake = "^1.4"

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 79
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"