[tool.poetry]
name = "gncitizen-backend"
version = "1.2.0"
description = "Citizen nature inventories (Backend"
authors = [
  "lpofredc",
  "hypsug0",
  'QuentinJouet',
  'jolleon',
  'HamoudaHamine',
  'Naomi-Fischer',
  'camillemonchicourt',
  'hypsug0',
  'jbdesbas',
  'samuelpriou',
  'orovellotti',
  'ktalbi',
]
license = "AGPLv3"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flasgger = "^0.9.7.1"
psycopg2-binary = "^2.9.10"
Shapely = "^2.0.7"
SQLAlchemy = "^1"
toml = "^0"
gunicorn = "^23.0.0"
GeoAlchemy2 = "^0.17.1"
Flask-SQLAlchemy = "^2"
geojson = "^2"
coloredlogs = "^15"
passlib = "^1.7.4"
requests = "^2.32.3"
xlwt = "^1.3.0"
utils-flask-sqlalchemy-geo = "^0"
flask-ckeditor = "^1.0.0"
flask-cors = "^4"
flask-caching = "^2.3.1"
flask-migrate = "^4.1.0"
flask = "^2"
flask-admin = "^1.6.1"
flask-jwt-extended = "^4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^6.0.0"
autoflake = "^2.0.0"
pylint = "^2.17.4"
pylint-flask = "^0.6"
pre-commit = ">3,<3.7.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^6"
sphinx-rtd-theme = "^2.0.0"
pygments = "^2.17.2"
myst-parser = "^3"

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
profile = "black"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 99
target-version = ['py38']

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 99
disable = """
    too-many-arguments,
    too-many-instance-attributes,
    too-few-public-methods
"""
good-names = ["i", "j", "k", "ex", "Run", "_", "db", "e"]

[tool.pylint.MASTER]
load-plugins = ["pylint_flask_sqlalchemy", "pylint_flask"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
